<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Transaction extends Model
{
    use HasFactory;

    protected $fillable = [
        'wallet_id', 'user_id', 'counterparty_user_id',
        'contract_id', 'milestone_id', 'withdrawal_id',
        'reference', 'idempotency_key',
        'type', 'direction', 'amount', 'fee', 'balance_after',
        'currency', 'status', 'description', 'metadata',
        'payment_method', 'stripe_payment_id',
    ];
    protected $casts = [
        'amount'        => 'decimal:2',
        'fee'           => 'decimal:2',
        'balance_after' => 'decimal:2',
        'metadata'      => 'array',
    ];

    public function wallet()       { return $this->belongsTo(Wallet::class); }
    public function user()         { return $this->belongsTo(User::class); }
    public function counterparty() { return $this->belongsTo(User::class, 'counterparty_user_id'); }
    public function contract()     { return $this->belongsTo(Contract::class); }
    public function milestone()    { return $this->belongsTo(Milestone::class); }
    public function withdrawal()   { return $this->belongsTo(Withdrawal::class); }
}
