@startuml
skinparam classAttributeIconSize 0
skinparam classFontSize 10
skinparam linetype ortho
skinparam backgroundColor #FAFAFA
skinparam class {
  BackgroundColor #EBF5FB
  BorderColor #2196F3
  HeaderBackgroundColor #2196F3
  HeaderFontColor white
}
title Diagramme de Classes -- FreeNest (modele de domaine complet)

' ─── Comptes & Securite ──────────────────────────────────────
class User {
  +id: int
  +name: string
  +username: string
  +email: string
  +role: enum[freelancer|client|admin]
  +avatar: string
  +country: string
  +is_active: boolean
  +is_verified: boolean
  +is_online: boolean
  +is_platform: boolean
  +google_id: string
  +stripe_customer_id: string
  +stripe_account_id: string
  +two_factor_secret: text
  +two_factor_recovery_codes: text
  +two_factor_confirmed_at: timestamp
  +last_seen_at: timestamp
}

class FreelancerProfile {
  +title: string
  +bio: text
  +hourly_rate: decimal
  +experience_level: enum
  +avg_rating: decimal
  +total_jobs: int
  +is_top_rated: boolean
  +onboarding_completed: boolean
}

class ClientProfile {
  +company_name: string
  +industry: string
  +total_spent: decimal
  +payment_verified: boolean
}

class IdentityVerification {
  +document_type: enum[passport|national_id|driving_license]
  +country: string
  +id_front_path: string
  +id_back_path: string
  +selfie_path: string
  +status: enum[pending|in_review|approved|rejected]
  +submitted_at: timestamp
  +reviewed_at: timestamp
}

class TaxDocument {
  +form_type: enum[w9|w8ben|vat]
  +country: string
  +legal_name: string
  +tax_id_last4: string
  +status: enum[draft|submitted|approved|rejected]
}

' ─── Talent & Recherche ───────────────────────────────────────
class Category {
  +name: string
  +slug: string
  +parent_id: int
}
class Skill {
  +name: string
  +slug: string
  +category_id: int
}
class Portfolio {
  +title: string
  +project_url: string
  +images: json
  +is_featured: boolean
}
class TalentList {
  +name: string
  +description: string
}
class SavedFreelancer {
  +user_id: int
  +freelancer_id: int
}

' ─── Marketplace ─────────────────────────────────────────────
class JobPosting {
  +title: string
  +description: text
  +type: enum[hourly|fixed]
  +budget_min: decimal
  +budget_max: decimal
  +status: enum
  +visibility: enum
  +proposals_count: int
  +is_featured: boolean
}

class Proposal {
  +cover_letter: text
  +bid_amount: decimal
  +status: enum[pending|shortlisted|accepted|rejected|withdrawn]
  +is_ai_generated: boolean
  +connects_used: int
}

class Contract {
  +title: string
  +type: enum
  +amount: decimal
  +escrow_amount: decimal
  +status: enum[pending|active|paused|completed|cancelled|disputed]
  +deadline_at: timestamp
  +disputed_at: timestamp
  +resolved_at: timestamp
  +archived_at: timestamp
}

class Milestone {
  +title: string
  +amount: decimal
  +status: enum[pending|in_progress|submitted|approved|rejected|paid]
  +submission_notes: text
  +rejection_reason: text
}

class ContractFile {
  +original_name: string
  +stored_path: string
  +version: int
}
class ContractActivity {
  +type: string
  +data: json
  +created_at: timestamp
}
class ContractExtension {
  +new_deadline: timestamp
  +additional_budget: decimal
  +status: enum
}
class TimeLog {
  +started_at: timestamp
  +ended_at: timestamp
  +duration_seconds: int
}

class Review {
  +rating: decimal
  +comment: text
  +breakdown: json
  +is_public: boolean
}

' ─── Finance ─────────────────────────────────────────────────
class Wallet {
  +balance: decimal
  +pending_balance: decimal
  +escrow_balance: decimal
  +currency: string
}

class Transaction {
  +type: enum[credit|debit|escrow|release|refund|withdrawal|fee]
  +direction: enum[in|out]
  +amount: decimal
  +fee: decimal
  +balance_after: decimal
  +idempotency_key: string
  +status: enum
}

class Withdrawal {
  +amount: decimal
  +fee: decimal
  +net: decimal
  +method: enum
  +status: enum[pending|approved|rejected|processing|completed|failed]
  +stripe_transfer_id: string
}

class Subscription {
  +plan: enum
  +connects_balance: int
  +status: enum
}
class StripeWebhookEvent {
  +stripe_event_id: string
  +type: string
  +status: enum
}
class PlatformSetting {
  +key: string
  +value: text
}

' ─── Messagerie temps reel ───────────────────────────────────
class Conversation {
  +type: enum[direct|contract|group]
  +last_message_at: timestamp
}
class Message {
  +body: text
  +type: enum[text|file|image|voice|system]
  +attachments: json
  +is_read: boolean
  +read_at: timestamp
  +edited_at: timestamp
  +delivered_at: timestamp
}
class MessageReaction {
  +emoji: string
}

' ─── Notifications, IA, Audit ────────────────────────────────
class Notification {
  +type: string
  +data: json
  +read_at: timestamp
}
class PushSubscription {
  +endpoint: string
  +p256dh: string
  +auth: string
}
class AiHistory {
  +type: enum
  +input: json
  +output: json
  +tokens_used: int
}
class AuditLog {
  +action: string
  +target_type: string
  +target_id: int
  +payload: json
}

' ─── Relations ───────────────────────────────────────────────
User "1" *-- "0..1" FreelancerProfile
User "1" *-- "0..1" ClientProfile
User "1" *-- "0..N" IdentityVerification
User "1" *-- "0..N" TaxDocument
User "1" *-- "1"    Wallet
User "1" o-- "N"    Portfolio
User "1" o-- "N"    TalentList
User "1" o-- "N"    SavedFreelancer
User "1" o-- "N"    Subscription
User "1" o-- "N"    PushSubscription
User "1" o-- "N"    Notification
User "1" o-- "N"    AiHistory
User "1" o-- "N"    AuditLog
User "N" -- "N"     Skill
User "N" -- "N"     Conversation

TalentList "N" -- "N" User

User "1" o-- "N" JobPosting
JobPosting "N" o-- "1" Category
JobPosting "1" o-- "N" Proposal

User "1" o-- "N" Proposal
Proposal "0..1" --> "1" Contract : genere >

Contract "1" *-- "N" Milestone
Contract "1" *-- "N" ContractFile
Contract "1" *-- "N" ContractActivity
Contract "1" *-- "N" ContractExtension
Contract "1" *-- "N" TimeLog
Contract "1" o-- "N" Review

Wallet "1" *-- "N" Transaction
User   "1" o-- "N" Withdrawal
Withdrawal "1" o-- "N" Transaction

Conversation "1" *-- "N" Message
Message      "1" *-- "N" MessageReaction
Contract     "1" o-- "1" Conversation
@enduml
